archivo settings, se incluyo para que el profesor tenga idea de la conexion utilizada

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 clase/virtual_main/
 clase/sitealmacen_oracle/virtual3/
 clase/sitealmacen_sqlServer/virtual4/
-/home/dairo/Base-de-datos-II/gestion_inventario/gestion_inventario/settings.py
-gestion_inventario/gestion_inventario/settings.py
-gestion_inventario/gestion_inventario/settings.py
+# /home/dairo/Base-de-datos-II/gestion_inventario/gestion_inventario/settings.py
+# gestion_inventario/gestion_inventario/settings.py
+# gestion_inventario/gestion_inventario/settings.py
 .venv
 /clase/
