--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,5 @@ clase/sitealmacen_sqlServer/virtual4/
 # /home/dairo/Base-de-datos-II/gestion_inventario/gestion_inventario/settings.py
 # gestion_inventario/gestion_inventario/settings.py
 # gestion_inventario/gestion_inventario/settings.py
-.venv
+/virtual_mysql
 /clase/
